full-moon/tests/cases/fail/parser/table-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/table-2
---
error[ast]: unexpected token `1`. 1 (expected a field)
  ┌─ source.lua:2:6
  │
2 │     a = 1,
  │         ^


